@@ -1,0 +1,93 @@
+ldx :: offset: 0x8, out: 0xd4326d909823b6e
+ldx :: offset: 0x10, out: 0x17c56b6b130476dc
+ldx :: offset: 0x18, out: 0x1e4750051a864db2
+ldx :: offset: 0x20, out: 0x22c9f00f2608edb8
+ldx :: offset: 0x28, out: 0x2b4bcb612f8ad6d6
+ldx :: offset: 0x30, out: 0x31cd86d3350c9b64
+ldx :: offset: 0x38, out: 0x384fbdbd3c8ea00a
+ldx :: offset: 0x40, out: 0x48d0c6c74c11db70
+ldx :: offset: 0x48, out: 0x4152fda94593e01e
+ldx :: offset: 0x50, out: 0x5bd4b01b5f15adac
+ldx :: offset: 0x58, out: 0x52568b75569796c2
+ldx :: offset: 0x60, out: 0x6ed82b7f6a1936c8
+ldx :: offset: 0x68, out: 0x675a1011639b0da6
+ldx :: offset: 0x70, out: 0x7ddc5da3791d4014
+ldx :: offset: 0x78, out: 0x745e66cd709f7b7a
+ldx :: offset: 0x80, out: 0x9ce2ab579823b6e0
+ldx :: offset: 0x88, out: 0x9560903991a18d8e
+ldx :: offset: 0x90, out: 0x8fe6dd8b8b27c03c
+ldx :: offset: 0x98, out: 0x8664e6e582a5fb52
+ldx :: offset: 0xa0, out: 0xbaea46efbe2b5b58
+ldx :: offset: 0xa8, out: 0xb3687d81b7a96036
+ldx :: offset: 0xb0, out: 0xa9ee3033ad2f2d84
+ldx :: offset: 0xb8, out: 0xa06c0b5da4ad16ea
+ldx :: offset: 0xc0, out: 0xd0f37027d4326d90
+ldx :: offset: 0xc8, out: 0xd9714b49ddb056fe
+ldx :: offset: 0xd0, out: 0xc3f706fbc7361b4c
+ldx :: offset: 0xd8, out: 0xca753d95ceb42022
+ldx :: offset: 0xe0, out: 0xf6fb9d9ff23a8028
+ldx :: offset: 0xe8, out: 0xff79a6f1fbb8bb46
+ldx :: offset: 0xf0, out: 0xe5ffeb43e13ef6f4
+ldx :: offset: 0xf8, out: 0xec7dd02de8bccd9a
+lbux :: offset: 0x8, out: 0x6e
+lbux :: offset: 0x10, out: 0xdc
+lbux :: offset: 0x18, out: 0xb2
+lbux :: offset: 0x20, out: 0xb8
+lbux :: offset: 0x28, out: 0xd6
+lbux :: offset: 0x30, out: 0x64
+lbux :: offset: 0x38, out: 0xa
+lbux :: offset: 0x40, out: 0x70
+lbux :: offset: 0x48, out: 0x1e
+lbux :: offset: 0x50, out: 0xac
+lbux :: offset: 0x58, out: 0xc2
+lbux :: offset: 0x60, out: 0xc8
+lbux :: offset: 0x68, out: 0xa6
+lbux :: offset: 0x70, out: 0x14
+lbux :: offset: 0x78, out: 0x7a
+lbux :: offset: 0x80, out: 0xe0
+lbux :: offset: 0x88, out: 0x8e
+lbux :: offset: 0x90, out: 0x3c
+lbux :: offset: 0x98, out: 0x52
+lbux :: offset: 0xa0, out: 0x58
+lbux :: offset: 0xa8, out: 0x36
+lbux :: offset: 0xb0, out: 0x84
+lbux :: offset: 0xb8, out: 0xea
+lbux :: offset: 0xc0, out: 0x90
+lbux :: offset: 0xc8, out: 0xfe
+lbux :: offset: 0xd0, out: 0x4c
+lbux :: offset: 0xd8, out: 0x22
+lbux :: offset: 0xe0, out: 0x28
+lbux :: offset: 0xe8, out: 0x46
+lbux :: offset: 0xf0, out: 0xf4
+lbux :: offset: 0xf8, out: 0x9a
+lwx :: offset: 0x8, out: 0x9823b6e
+lwx :: offset: 0x10, out: 0x130476dc
+lwx :: offset: 0x18, out: 0x1a864db2
+lwx :: offset: 0x20, out: 0x2608edb8
+lwx :: offset: 0x28, out: 0x2f8ad6d6
+lwx :: offset: 0x30, out: 0x350c9b64
+lwx :: offset: 0x38, out: 0x3c8ea00a
+lwx :: offset: 0x40, out: 0x4c11db70
+lwx :: offset: 0x48, out: 0x4593e01e
+lwx :: offset: 0x50, out: 0x5f15adac
+lwx :: offset: 0x58, out: 0x569796c2
+lwx :: offset: 0x60, out: 0x6a1936c8
+lwx :: offset: 0x68, out: 0x639b0da6
+lwx :: offset: 0x70, out: 0x791d4014
+lwx :: offset: 0x78, out: 0x709f7b7a
+lwx :: offset: 0x80, out: 0xffffffff9823b6e0
+lwx :: offset: 0x88, out: 0xffffffff91a18d8e
+lwx :: offset: 0x90, out: 0xffffffff8b27c03c
+lwx :: offset: 0x98, out: 0xffffffff82a5fb52
+lwx :: offset: 0xa0, out: 0xffffffffbe2b5b58
+lwx :: offset: 0xa8, out: 0xffffffffb7a96036
+lwx :: offset: 0xb0, out: 0xffffffffad2f2d84
+lwx :: offset: 0xb8, out: 0xffffffffa4ad16ea
+lwx :: offset: 0xc0, out: 0xffffffffd4326d90
+lwx :: offset: 0xc8, out: 0xffffffffddb056fe
+lwx :: offset: 0xd0, out: 0xffffffffc7361b4c
+lwx :: offset: 0xd8, out: 0xffffffffceb42022
+lwx :: offset: 0xe0, out: 0xfffffffff23a8028
+lwx :: offset: 0xe8, out: 0xfffffffffbb8bb46
+lwx :: offset: 0xf0, out: 0xffffffffe13ef6f4
+lwx :: offset: 0xf8, out: 0xffffffffe8bccd9a
